src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>PSA_Billing_Level__c</fullName>
        <description>PSA - Resource&apos;s billing level</description>
        <inlineHelpText>Resource billing level</inlineHelpText>
        <label>Billing Level</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Blended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor17</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Company_Name__c</fullName>
        <description>Passed from Workday, helpful to determine the Account for Contractor Resources</description>
        <inlineHelpText>Passed from Workday, helpful to determine the Account for Contractor Resources</inlineHelpText>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Contingent_Worker_Type__c</fullName>
        <label>Contingent Worker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business to Business (B2B) Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Agency Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Contractor (1099)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Cost_Rate_Effective_Date__c</fullName>
        <description>The effective date of cost rates.</description>
        <label>Cost Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Cost_Rate_Needs_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the costs rates need to be manually reviewed.</description>
        <label>Cost Rate Needs Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Fully_Loaded_Cost_Rate__c</fullName>
        <description>PSA - Fully Loaded Cost Rate</description>
        <inlineHelpText>Fully Loaded Cost Rate</inlineHelpText>
        <label>Fully Loaded Cost Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Global_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a resource as a Global Mobile resource</description>
        <inlineHelpText>Identifies a resource as a Global Mobile resource</inlineHelpText>
        <label>Global Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Hire_Date__c</fullName>
        <description>PSA - Hire date.</description>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Home_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Country</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Contacts (Home Country)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Home_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home State</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Contacts (Home State)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Legal_First_Name__c</fullName>
        <label>Legal First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Legal_Last_Name__c</fullName>
        <label>Legal Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_PS_Level__c</fullName>
        <label>PS Level</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>142</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>143</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>145</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>153</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>155</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>163</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>165</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>203</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>206</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>235</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>245</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>255</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Product_Line_ID__c</fullName>
        <description>May be used in the future</description>
        <label>Product Line ID</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile &amp; Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonspecific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH Smart Communications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Cost_Center__c</fullName>
        <description>Combination of Entity Name and Department Code</description>
        <formula>PSA_Resource_Entity__r.Name + &apos;-&apos; +  PSA_Resource_Department__r.PSA_Department_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combination of Entity Name and Department Code</inlineHelpText>
        <label>Resource Cost Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Department</label>
        <referenceTo>PSA_Department__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Entity</label>
        <referenceTo>PSA_Entity__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Manager__c</fullName>
        <formula>pse__Salesforce_User__r.Manager.FirstName + &apos; &apos;+  pse__Salesforce_User__r.Manager.LastName</formula>
        <label>Resource Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Review_Status__c</fullName>
        <label>Resource Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Integration Logging</description>
        <inlineHelpText>Used for Integration Logging</inlineHelpText>
        <label>PSA Resource Stage</label>
        <referenceTo>PSA_Resource_Stage__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Termination_Date__c</fullName>
        <description>Passed from the Workday Integration</description>
        <inlineHelpText>Passed from the Workday Integration</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Worker_Id__c</fullName>
        <description>Unique, External Identifier from Workday</description>
        <externalId>true</externalId>
        <label>Worker Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PSA_Worker_Type__c</fullName>
        <label>Worker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent Worker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyCenter_Letter_Campaign_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for any Account that should be excluded from the PolicyCenter letter camapign starting April 2009.</description>
        <inlineHelpText>Check box for any Account that should be excluded from the PolicyCenter letter camapign starting April 2009.</inlineHelpText>
        <label>PolicyCenter Letter Campaign Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PolicyCenter_Letter_Wave_2__c</fullName>
        <label>PolicyCenter Letter Wave 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PolicyCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PolicyCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefered_Outreach__c</fullName>
        <inlineHelpText>How does this person prefer to be contacted by Guidewire marketing?</inlineHelpText>
        <label>Preferred Outreach</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Press_Releases_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Press Releases Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_As__c</fullName>
        <label>Print As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Age_of_Legacy_Product__c</fullName>
        <description>Used by RFI web form on corp site</description>
        <label>RFI Age of Legacy Product</label>
        <picklist>
            <picklistValues>
                <fullName>2006 or newer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002 - 2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997 - 2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996 or older</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFI_Budget__c</fullName>
        <description>Used by RFI web form on our corporate site</description>
        <label>RFI Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFI_Current_Legacy_Product__c</fullName>
        <description>Used by RFI web form on corp site</description>
        <label>RFI Current Legacy Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_GW_Product_Interest__c</fullName>
        <description>Used by RFI web form on corp site</description>
        <label>RFI GW Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RFI_LOB__c</fullName>
        <description>Used by RFI web form on corp site</description>
        <label>RFI LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Parent_Company__c</fullName>
        <description>Used by RFI web form on corp site</description>
        <label>RFI Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Project_Start__c</fullName>
        <description>Used by RFI web form on corp site</description>
        <label>RFI Project Start</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Call_From_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Call From Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <label>SFDC Campaign ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_Status__c</fullName>
        <label>SFDC Campaign Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Snail_Email__c</fullName>
        <label>Snail/Email</label>
        <picklist>
            <picklistValues>
                <fullName>Snail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Starter_Kit__c</fullName>
        <label>Starter Kit</label>
        <picklist>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consulting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Record Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the subscription management process.  This is a hidden field.</description>
        <label>Subscription Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testimonials__c</fullName>
        <description>Customer Testimonials</description>
        <label>Testimonials</label>
        <picklist>
            <picklistValues>
                <fullName>Canal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suncorp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Street America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominion</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <picklist>
            <picklistValues>
                <fullName>General Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Starter Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Web Seminar Archive</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>URL1__c</fullName>
        <label>URL1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>- Will bring in the related Contat and Partner User Information from the triggre on the User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Seminar_Archive__c</fullName>
        <label>Web Seminar Archive</label>
        <picklist>
            <picklistValues>
                <fullName>ClaimCenter 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combating Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementing ClaimCenter - Merastar CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Claims System - Suncorp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy System Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperless Claims Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter - Next Gen Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider Best Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilizing Tech for Effective Workers CCM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Invitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Invitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whitepaper__c</fullName>
        <label>Whitepapers</label>
        <picklist>
            <picklistValues>
                <fullName>Tailored whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieving underwriting excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improving Claims Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTG: Whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieving Claims Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precision-Underwriting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>appirio_core__Last_Access_Date__c</fullName>
        <description>Contains a timestamp for the most recent &quot;login&quot; of this feature user, to be used for PIN expiration.</description>
        <label>Last Access Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appirio_core__Licensed_Features__c</fullName>
        <label>Licensed Features</label>
        <picklist>
            <picklistValues>
                <fullName>Timecard Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>appirio_core__PIN__c</fullName>
        <description>Used to authenticate feature-only users to the Sites pages</description>
        <label>PIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>CompanyName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <picklist>
            <picklistValues>
                <fullName>Type1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccrz__IsPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Contact a Portal User</description>
        <inlineHelpText>True if contact is a portal user, False otherwise</inlineHelpText>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SelfRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean determining if the user is a portal user self registered through the site.</description>
        <label>Self Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>customer_success_stories__c</fullName>
        <label>customer success stories</label>
        <picklist>
            <picklistValues>
                <fullName>Canal Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iCAT/Boulder Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Street America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>